--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -325,7 +325,7 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 While a few studies show $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves across species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Contrastingly, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
-Further, @xuSeasonalVariationTemperature2006 showed that the response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] in Quercus rubra hardly varied with canopy position. However, considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect is greater in drier sites.
+Further, @xuSeasonalVariationTemperature2006 showed that the response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] in Quercus rubra also hardly varied with canopy position. However, considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites.
  
 ### VOC production
 
@@ -344,7 +344,7 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Accordingly, heat, associated with increase in temperature and VPD even under adequete water can cause greater tree hydraulic stress and altered and soil-water dynamics than milder drought, particulary in temperate species [@ruehrWaterAvailabilityDominant2016]. However, soil water loss during drought effects larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate]. Further, heat with drought exacerbates tree stress [@ruehrWaterAvailabilityDominant2016]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
+Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Accordingly, heat, associated with increase in temperature and VPD even under adequete water can cause greater tree hydraulic stress and altered soil-water dynamics than milder drought, particulary in temperate species [@ruehrWaterAvailabilityDominant2016]. However, soil water loss during drought effects larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate]. Further, heat with drought exacerbates tree stress [@ruehrWaterAvailabilityDominant2016]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
 
 Phenologically in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
 
@@ -411,6 +411,8 @@ DGVMs operate at a range of scales and have varying degrees of complexity, rangi
 This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan et al. 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt et al. 1998; Moorcroft et al., 2001; Smith et al. 2001; Stark et al., 2012). 
 Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015).
 Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output, highlighting the need to identify and parsimoniously represent the most essential drivers of forest ecosystem function. 
+
+-Shading by the overstory can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other LIDAR-based analyses (e.g., Bode et al. https://doi.org/10.1016/j.rse.2014.01.028, Musselman et al. https://doi.org/10.1016/j.rse.2013.05.021, Davis et al. https://doi.org/10.1016/j.agrformet.2019.02.015)
 
 ![**Figure `r fig_model`. DRAFT. Enrich this by showing 3-4 carefully selected scenarios (e.g., baseline, warming-mesic, warming-drought, canopy disturbance), and maybe a few key processes/ consequences (leaf T, C balance).** [Issue #42](https://github.com/EcoClimLab/vertical-thermal-review/issues/42). ](schematics/model_schematic.png)
 
