--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -164,6 +164,22 @@
   langid = {english}
 }
 
+@article{atkinLeafRespirationSnow2000,
+  title = {Leaf {{Respiration}} of {{Snow Gum}} in the {{Light}} and {{Dark}}. {{Interactions}} between {{Temperature}} and {{Irradiance1}}},
+  author = {Atkin, Owen K. and Evans, John R. and Ball, Marilyn C. and Lambers, Hans and Pons, Thijs L.},
+  date = {2000-03-01},
+  journaltitle = {Plant Physiology},
+  volume = {122},
+  pages = {915--924},
+  issn = {0032-0889},
+  doi = {10.1104/pp.122.3.915},
+  url = {https://doi.org/10.1104/pp.122.3.915},
+  urldate = {2021-06-08},
+  abstract = {We investigated the effect of temperature and irradiance on leaf respiration (R, non-photorespiratory mitochondrial CO2 release) of snow gum (Eucalyptus pauciflora Sieb. ex Spreng). Seedlings were hydroponically grown under constant 20°C, controlled-environment conditions. Measurements of R (using the Laisk method) and photosynthesis (at 37 Pa CO2) were made at several irradiances (0–2,000 μmol photons m−2 s−1) and temperatures (6°C–30°C). At 15°C to 30°C, substantial inhibition of R occurred at 12 μmol photons m−2 s−1, with maximum inhibition occurring at 100 to 200 μmol photons m−2 s−1. Higher irradiance had little additional effect on R at these moderate temperatures. The irradiance necessary to maximally inhibitR at 6°C to 10°C was lower than that at 15°C to 30°C. Moreover, although R was inhibited by low irradiance at 6°C to 10°C, it recovered with progressive increases in irradiance. The temperature sensitivity of R was greater in darkness than under bright light. At 30°C and high irradiance, light-inhibited rates of R represented 2\% of gross CO2 uptake (v ~c), whereas photorespiratory CO2 release was approximately 20\% of v ~c. If light had not inhibited leaf respiration at 30°C and high irradiance, R would have represented 11\% of v ~c. Variations in light inhibition of R can therefore have a substantial impact on the proportion of photosynthesis that is respired. We conclude that the rate of R in the light is highly variable, being dependent on irradiance and temperature.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\898624HQ\\Atkin et al. - 2000 - Leaf Respiration of Snow Gum in the Light and Dark.pdf;C\:\\Users\\Me\\Zotero\\storage\\HVYT2TDR\\6081185.html},
+  number = {3}
+}
+
 @article{augspurgerDifferencesLeafPhenology2003,
   title = {Differences in Leaf Phenology between Juvenile and Adult Trees in a Temperate Deciduous Forest},
   author = {Augspurger, C. K. and Bartlett, E. A.},
@@ -2904,6 +2920,25 @@
   number = {1}
 }
 
+@article{keenanWidespreadInhibitionDaytime2019,
+  title = {Widespread Inhibition of Daytime Ecosystem Respiration},
+  author = {Keenan, Trevor F. and Migliavacca, Mirco and Papale, Dario and Baldocchi, Dennis and Reichstein, Markus and Torn, Margaret and Wutzler, Thomas},
+  date = {2019-03},
+  journaltitle = {Nat Ecol Evol},
+  volume = {3},
+  pages = {407--415},
+  publisher = {{Nature Publishing Group}},
+  issn = {2397-334X},
+  doi = {10.1038/s41559-019-0809-2},
+  url = {http://www.nature.com/articles/s41559-019-0809-2},
+  urldate = {2021-06-08},
+  abstract = {The global land surface absorbs about a third of anthropogenic emissions each year, due to the difference between two key processes: ecosystem photosynthesis and respiration. Despite the importance of these two processes, it is not possible to measure either at the ecosystem scale during the daytime. Eddy-covariance measurements are widely used as the closest ‘quasi-direct’ ecosystem-scale observation from which to estimate ecosystem photosynthesis and respiration. Recent research, however, suggests that current estimates may be biased by up to 25\%, due to a previously unaccounted for process: the inhibition of leaf respiration in the light. Yet the extent of inhibition remains debated, and implications for estimates of ecosystem-scale respiration and photosynthesis remain unquantified. Here, we quantify an apparent inhibition of daytime ecosystem respiration across the global FLUXNET eddy-covariance network and identify a pervasive influence that varies by season and ecosystem type. We develop partitioning methods that can detect an apparent ecosystem-scale inhibition of daytime respiration and find that diurnal patterns of ecosystem respiration might be markedly different than previously thought. The results call for the re-evaluation of global terrestrial carbon cycle models and also suggest that current global estimates of photosynthesis and respiration may be biased, some on the order of magnitude of anthropogenic fossil fuel emissions.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BFC8T6XK\\Keenan et al. - 2019 - Widespread inhibition of daytime ecosystem respira.pdf;C\:\\Users\\Me\\Zotero\\storage\\AIGBM92Q\\s41559-019-0809-2.html},
+  issue = {3},
+  langid = {english},
+  number = {3}
+}
+
 @article{kellyDroughtCO2Interactions2016,
   title = {Drought × {{CO2}} Interactions in Trees: A Test of the Low-Intercellular {{CO2}} Concentration ({{Ci}}) Mechanism},
   shorttitle = {Drought × {{CO2}} Interactions in Trees},
@@ -5560,6 +5595,25 @@
   number = {1/2}
 }
 
+@article{parkwilliamsTemperaturePotentDriver2013,
+  title = {Temperature as a Potent Driver of Regional Forest Drought Stress and Tree Mortality},
+  author = {Park Williams, A. and Allen, Craig D. and Macalady, Alison K. and Griffin, Daniel and Woodhouse, Connie A. and Meko, David M. and Swetnam, Thomas W. and Rauscher, Sara A. and Seager, Richard and Grissino-Mayer, Henri D. and Dean, Jeffrey S. and Cook, Edward R. and Gangodagamage, Chandana and Cai, Michael and McDowell, Nate G.},
+  date = {2013-03},
+  journaltitle = {Nature Clim Change},
+  volume = {3},
+  pages = {292--297},
+  publisher = {{Nature Publishing Group}},
+  issn = {1758-6798},
+  doi = {10.1038/nclimate1693},
+  url = {http://www.nature.com/articles/nclimate1693},
+  urldate = {2021-06-09},
+  abstract = {As the climate changes, drought may reduce tree productivity and survival across many forest ecosystems; however, the relative influence of specific climate parameters on forest decline is poorly understood. We derive a forest drought-stress index (FDSI) for the southwestern United States using a comprehensive tree-ring data set representing AD 1000–2007. The FDSI is approximately equally influenced by the warm-season vapour-pressure deficit (largely controlled by temperature) and cold-season precipitation, together explaining 82\% of the FDSI variability. Correspondence between the FDSI and measures of forest productivity, mortality, bark-beetle outbreak and wildfire validate the FDSI as a holistic forest-vigour indicator. If the vapour-pressure deficit continues increasing as projected by climate models, the mean forest drought-stress by the 2050s will exceed that of the most severe droughts in the past 1,000 years. Collectively, the results foreshadow twenty-first-century changes in forest structures and compositions, with transition of forests in the southwestern United States, and perhaps water-limited forests globally, towards distributions unfamiliar to modern civilization.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\L2C83LUT\\Park Williams et al. - 2013 - Temperature as a potent driver of regional forest .pdf;C\:\\Users\\Me\\Zotero\\storage\\ZIFMDDAN\\nclimate1693.html},
+  issue = {3},
+  langid = {english},
+  number = {3}
+}
+
 @article{pauTropicalForestTemperature2018,
   title = {Tropical Forest Temperature Thresholds for Gross Primary Productivity},
   author = {Pau, Stephanie and Detto, Matteo and Kim, Youngil and Still, Christopher J.},
@@ -6166,6 +6220,26 @@
   keywords = {biogeography,ecotype,pine,spruce},
   langid = {english},
   number = {38}
+}
+
+@article{reichsteinSevereDroughtEffects2002,
+  title = {Severe Drought Effects on Ecosystem {{CO2}} and {{H2O}} Fluxes at Three {{Mediterranean}} Evergreen Sites: Revision of Current Hypotheses?},
+  shorttitle = {Severe Drought Effects on Ecosystem {{CO2}} and {{H2O}} Fluxes at Three {{Mediterranean}} Evergreen Sites},
+  author = {Reichstein, Markus and Tenhunen, John D. and Roupsard, Olivier and Ourcival, Jean-marc and Rambal, Serge and Miglietta, Franco and Peressotti, Alessandro and Pecchiari, Marco and Tirone, Giampiero and Valentini, Riccardo},
+  date = {2002},
+  journaltitle = {Global Change Biology},
+  volume = {8},
+  pages = {999--1017},
+  issn = {1365-2486},
+  doi = {10.1046/j.1365-2486.2002.00530.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-2486.2002.00530.x},
+  urldate = {2021-06-09},
+  abstract = {Eddy covariance and sapflow data from three Mediterranean ecosystems were analysed via top-down approaches in conjunction with a mechanistic ecosystem gas-exchange model to test current assumptions about drought effects on ecosystem respiration and canopy CO2/H2O exchange. The three sites include two nearly monospecific Quercus ilex L. forests – one on karstic limestone (Puéchabon), the other on fluvial sand with access to ground water (Castelporziano) – and a typical mixed macchia on limestone (Arca di Noè). Estimates of ecosystem respiration were derived from light response curves of net ecosystem CO2 exchange. Subsequently, values of ecosystem gross carbon uptake were computed from eddy covariance CO2 fluxes and estimates of ecosystem respiration as a function of soil temperature and moisture. Bulk canopy conductance was calculated by inversion of the Penman-Monteith equation. In a top-down analysis, it was shown that all three sites exhibit similar behaviour in terms of their overall response to drought. In contrast to common assumptions, at all sites ecosystem respiration revealed a decreasing temperature sensitivity (Q10) in response to drought. Soil temperature and soil water content explained 70–80\% of the seasonal variability of ecosystem respiration. During the drought, light-saturated ecosystem gross carbon uptake and day-time averaged canopy conductance declined by up to 90\%. These changes were closely related to soil water content. Ecosystem water-use efficiency of gross carbon uptake decreased during the drought, regardless whether evapotranspiration from eddy covariance or transpiration from sapflow had been used for the calculation. We evidence that this clearly contrasts current models of canopy function which predict increasing ecosystem water-use efficiency (WUE) during the drought. Four potential explanations to those results were identified (patchy stomatal closure, changes in physiological capacities of photosynthesis, decreases in mesophyll conductance for CO2, and photoinhibition), which will be tested in a forthcoming paper. It is suggested to incorporate the new findings into current biogeochemical models after further testing as this will improve estimates of climate change effects on (semi)arid ecosystems' carbon balances.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2486.2002.00530.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EQXPPWUS\\Reichstein et al. - 2002 - Severe drought effects on ecosystem CO2 and H2O fl.pdf},
+  keywords = {drought,ecosystem carbon balance,ecosystem respiration,ecosystem water-use efficiency,modelling,Q10,stomatal control},
+  langid = {english},
+  number = {10}
 }
 
 @article{reichWhatRelevantTime,
@@ -8574,6 +8648,44 @@
   keywords = {canopy temperature,plant hydraulic traits,sap flux,stomatal regulation,thermal remote sensing,vapor pressure deficit},
   langid = {english},
   number = {12}
+}
+
+@article{zaragoza-castellsClimatedependentVariationsLeaf2008,
+  title = {Climate-Dependent Variations in Leaf Respiration in a Dry-Land, Low Productivity {{Mediterranean}} Forest: The Importance of Acclimation in Both High-Light and Shaded Habitats},
+  shorttitle = {Climate-Dependent Variations in Leaf Respiration in a Dry-Land, Low Productivity {{Mediterranean}} Forest},
+  author = {Zaragoza-Castells, Joana and Sánchez-Gómez, David and Hartley, Iain P. and Matesanz, Silvia and Valladares, Fernando and Lloyd, Jon and Atkin, Owen K.},
+  date = {2008},
+  journaltitle = {Functional Ecology},
+  volume = {22},
+  pages = {172--184},
+  issn = {1365-2435},
+  doi = {10.1111/j.1365-2435.2007.01355.x},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2435.2007.01355.x},
+  urldate = {2021-06-08},
+  abstract = {1 Climate-driven changes in leaf respiration (R) in darkness have the potential to determine whether low productivity ecosystems exhibit positive or negative carbon balances. 2 We investigated whether sustained exposure to full sunlight, shade and seasonal drought alters the temperature response of leaf R of field-grown Quercus ilex subsp. ballota in a dry-land continental Mediterranean ecosystem. The plants studied, experience large diurnal and seasonal variations in temperature. 3 Whilst growth irradiance impacted on photosynthesis, it had little effect on the short-term temperature dependence of leaf R. Moreover, although basal rates of leaf R (i.e. rates of R at a common measuring temperature) were higher in sun-exposed than shade-exposed leaves, growth irradiance had little impact on the degree of acclimation to seasonal changes in temperature and/or moisture. Basal rates of leaf R were higher in winter than summer in both sun-exposed and shaded plants. Estimated Q10 values (i.e. proportional increase in R per 10 °C rise in temperature) for leaf R were greater in winter than summer; however, no seasonal variation was found in the apparent activation energy (E0) of leaf R. These observations were used to construct a simple Arrhenius model that fully accounted for both daily and seasonal variations in the temperature dependence of R in both sun-exposed and shaded plants. Crucial to the model was accounting for the seasonal and irradiance-dependent shifts in the basal rate of leaf R. 4 Although the balance between daily R and photosynthesis increased markedly in summer (particularly under full sun), the increase in this ratio was markedly less than would have been the case if leaf R had not acclimated to the high average day time temperatures in summer. 5 It is concluded that seasonal acclimation of leaf R plays a crucial role in determining the viability of tree growth in dry-land, low productivity forest ecosystems.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2435.2007.01355.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SLEVVX4I\\Zaragoza-Castells et al. - 2008 - Climate-dependent variations in leaf respiration i.pdf},
+  keywords = {drought,irradiance,leaf,respiration,temperature},
+  langid = {english},
+  number = {1}
+}
+
+@article{zaragoza-castellsDoesGrowthIrradiance2007,
+  title = {Does Growth Irradiance Affect Temperature Dependence and Thermal Acclimation of Leaf Respiration? {{Insights}} from a {{Mediterranean}} Tree with Long-Lived Leaves},
+  shorttitle = {Does Growth Irradiance Affect Temperature Dependence and Thermal Acclimation of Leaf Respiration?},
+  author = {Zaragoza-Castells, Joana and Sánchez-Gómez, David and Valladares, Fernando and Hurry, Vaughan and Atkin, Owen K.},
+  date = {2007-07},
+  journaltitle = {Plant Cell Environ},
+  volume = {30},
+  pages = {820--833},
+  issn = {0140-7791, 1365-3040},
+  doi = {10.1111/j.1365-3040.2007.01672.x},
+  url = {http://doi.wiley.com/10.1111/j.1365-3040.2007.01672.x},
+  urldate = {2021-06-08},
+  abstract = {Understanding the response of leaf respiration (R) to changes in irradiance and temperature is a prerequisite for predicting the impacts of climate change on plant function and future atmospheric CO2 concentrations. Little is known, however, about the interactive effects of irradiance and temperature on leaf R. We investigated whether growth irradiance affects the temperature response of leaf R in darkness (Rdark) and in light (Rlight) in seedlings of a broadleaved evergreen species, Quercus ilex. Two hypotheses concerning Rdark were tested: (1) the Q10 (i.e. the proportional increase in R per 10 °C rise in temperature) of leaf Rdark is lower in shaded plants than in high-light-grown plants, and (2) shade-grown plants exhibit a lower degree of thermal acclimation of Rdark than plants exposed to higher growth irradiance. We also assessed whether light inhibition of Rlight differs between leaves exposed to contrasting temperatures and growth irradiances, and whether the degree of thermal acclimation of Rlight is dependent on growth irradiance. We showed that while growth irradiance did impact on photosynthesis, it had no effect on the Q10 of leaf Rdark. Growth irradiance had little impact on thermal acclimation when fully expanded, pre-existing leaves were exposed to contrasting temperatures for several weeks. When Rlight was measured at a common irradiance, Rlight/Rdark ratios were higher in shaded plants due to homeostasis of Rlight between growth irradiance treatments and to the lower Rdark in shaded leaves. We also showed that Rlight does not acclimate to the same degree as Rdark, and that Rlight/Rdark decreases with increasing measuring and growth temperatures, irrespective of the growth irradiance. Collectively, we raised the possibility that predictive carbon cycle models can assume that growth irradiance and photosynthesis do not affect the temperature sensitivity of leaf Rdark of long-lived evergreen leaves, thus simplifying incorporation of leaf R into such models.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\2UEJPLDT\\Zaragoza-Castells et al. - 2007 - Does growth irradiance affect temperature dependen.pdf},
+  langid = {english},
+  number = {7}
 }
 
 @article{zellweger_forest_2020,
