--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -147,7 +147,7 @@ While the focus here is on vertical gradients, it is important to note that in h
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
  The distribution of this foliage is structured in correspondence with the distribution of tree sizes, and successional stages within a forest, where leaf area density ($LAD$) ie. leaf area per unit volume, increases with tree-height eventually forming the canopy layer.
 
-LAD along the vertical gradient is heterogeneous, with common patterns that vary across forests. Dense canopy forests composed of broadleaf trees can have high $LAD$ in the upper canopy layers, as well as in the understory for eg. in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993] whereas in temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [@parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a]. In open canopy forests, such as needle-leaf forests, LAD is predominantly accumulated in the lower canopy layers [@lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a].Soil moisture conditions, topography, gap formations followed by disturbance, all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @parkerCanopyLightTransmittance2002 ; @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020; @bonan_ecological_2016]. In addition, seasonally dry and wet conditions, deciduousness and phenology contribute to the spatial loss and gain of leaves (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size classes (@conditQuantifyingDeciduousnessTropical2000c, Meakem, *temperate REFS*). In this review, we focus on growing season conditions unless otherwise noted.
+LAD along the vertical gradient is heterogeneous, with common patterns that vary across forests. Dense canopy forests composed of broadleaf trees can have high $LAD$ in the upper canopy layers, as well as in the understory such as in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993] whereas in temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [@parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a]. In open canopy forests, such as needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [@lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. Soil moisture conditions, topography, gap formations followed by disturbance, all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @parkerCanopyLightTransmittance2002 ; @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020; @bonan_ecological_2016]. In addition, seasonally dry and wet conditions, deciduousness and phenology contribute to the spatial loss and gain of leaves (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size classes (@conditQuantifyingDeciduousnessTropical2000c, Meakem, *temperate REFS*). In this review, we focus on growing season conditions unless otherwise noted.
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), decreases from canopy tops to the forest floor, with the shape of profile modified by leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`, @koike_leaf_2001].** 
 This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests, than open canopy forests such as needle-leaf forests [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
@@ -160,7 +160,7 @@ The implication is that upper canopy leaves have substantially higher boundary l
 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).**
 The $T_{air}$ gradient along canopies and understories vary with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation [*Defrenne et al. 2021*]. 
-Typically, dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. Noteably, this pattern can be reversed in open canopy forests or sparse stands, particularly in xeric sites, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the canopy and the soil that is intercepted by lower-canopy layers--analogous to 'canopy greenhouse effect' [@banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
+Typically, dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. Noteably, this pattern can be reversed in open canopy forests or sparse stands, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers--analogous to 'canopy greenhouse effect' [@banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
 
 **Relative humidity, $RH$, is generally highest in the understory and decreases with height across the vertical profile [Fig. `r fig_NEON_vertical`; e.g., @mcgregor_tree_nodate].**
 Dense-canopy forests maintain higher daily maximum $RH$ below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a]. 
@@ -225,7 +225,7 @@ Isolating height (>35m) from light shows that, canopy $gs$ decreases with increa
 Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research that is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
 ### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
-Leaf traits vary within an indivual tree at a vertical gradient from exposed canopy regions to shaded regions (intraspecific variation), and as well across mutiple trees' exposed canopy to shaded canopy regions (inter-specific variation). 
+Leaf trait comparison within an individual tree here is referred to as intraspecific variation, and comparison of traits between species of multiple trees here is referred to as inter-specific variation. 
 
 Therefore, across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table 1).
@@ -249,15 +249,15 @@ nocite: |
 
 #### Morphological traits
 
-Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with structural strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998, *REF*]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves have lower convective cooling strategies, and invest more in light capture [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaf differences in canopy orientations are shaped by canopy $T_{air_{max}}$ and $VPD$ stress than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with structural strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998, *REF*]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves have lower convective cooling strategies, and invest more in light capture [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous canopy light conditions, sun-leaf differences in canopy orientations are shaped by canopy $T_{air_{max}}$ and $VPD$ stress than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### Biochemical and physiological traits
 
-The distribution of biochemical traits enable photosynthesis and metabolic processes, and protect against heat and light damage in sun-leaves. $N_{area}$, that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition along sun-leaves and, shade-leaves during sunflecks [@kitaoCanopyNitrogenDistribution2018]. Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb increasing temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
+The vertical distribution of biochemical traits enables photosynthesis and metabolic processes, and protects against heat and light damage in exposed canopy leaves. Particualy, $N_{area}$ that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition along sun-leaves and, shade-leaves during sunflecks [@kitaoCanopyNitrogenDistribution2018]. Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb increasing temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
 
 ### Interspecific variation 
 
-Widely, across forest species, fundamental trait adaptation to light gradients are similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012], that further vary with levels of trait plasticity [REF], for eg. between  canopy multi-species, and understory species, trait plasticity can vary several-folds based on inherent specie-specific traits, even under similar biophysical conditions respectively. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space, with different levels of plasticity [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore $T_{leaf}$ varies across specie-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Widely, across forest species, the pattern of fundamental trait adaptation to light gradients is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, trait plasticity can vary several-folds between  multi-species canopy and understory,  based on their inherent specie-specific traits and environmental conditions. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Along the ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ are observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore, collectively, $T_{leaf}$ differs across specie-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -268,7 +268,7 @@ New-leaf growth along the light gradient constantly shades leaves underneath. Th
 
 ##### *Deciduousness*
 
-Deciduousness as a trait is an adaptation to converse water under stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among tropical species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000c]. In deciduous-temperate forests, spatio-temporal leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999].Therefore, deciduous leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient [@rey-sanchez_spatial_2016]. 
+Deciduousness as a trait is an adaptation to conserve water under stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among tropical species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000c]. In deciduous-temperate forests, spatio-temporal leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999].Therefore, deciduous leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient [@rey-sanchez_spatial_2016]. 
 
 ## Leaf metabolism and thermal responses
 
@@ -287,7 +287,7 @@ nocite: |
 
 ### Stomatal conductance
 
-Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] where although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. This diurnal pattern and resulting $A_{max}$ differs between species, such as early- and late-successional [@ishiiExploringRelationshipsCanopy2004a], and between gymnosperms and angiosperms [@bonan_ecological_2016].
+Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] where although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steep in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. This diurnal pattern and resulting $A_{max}$ varies between species, such as early- and late-successional [@ishiiExploringRelationshipsCanopy2004a], and between gymnosperms and angiosperms [@bonan_ecological_2016].
 
 ### Photosynthesis
 
