editing respiration part

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2609,6 +2609,13 @@
   number = {4}
 }
 
+@online{IncreasingRespiratoryCosts,
+  title = {Do Increasing Respiratory Costs Explain the Decline with Age of Forest Growth Rate? | {{SpringerLink}}},
+  url = {https://link.springer.com/article/10.1007/s11676-019-01020-w},
+  urldate = {2021-06-09},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WAMN9CLW\\Do increasing respiratory costs explain the declin.pdf}
+}
+
 @online{InteractionsWaterStress,
   title = {Interactions between Water Stress, Sun‐shade Acclimation, Heat Tolerance and Photoinhibition in the Sclerophyll {{Heteromeles}} Arbutifolia - {{VALLADARES}} - 1997 - {{Plant}}, {{Cell}} \&amp; {{Environment}} - {{Wiley Online Library}}},
   url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1046/j.1365-3040.1997.d01-8.x},
