--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -225,7 +225,7 @@ Isolating height (>35m) from light shows that, canopy $gs$ decreases with increa
 Disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) of leaf traits remains an important area for research that is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
 ### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
-Leaf trait comparison within an individual tree here is referred to as intraspecific variation, and comparison of traits between species of multiple trees here is referred to as inter-specific variation. 
+Leaf trait comparison within an individual tree of the same species, here, is referred to as intraspecific variation, and comparison of traits between species of multiple trees is referred to as interspecific variation. 
 
 Therefore, across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table 1).
@@ -234,7 +234,9 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Leaf traits vary--from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020] that contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. Table `r table_leaf_traits`, summarizes relevant traits for thermal sensitivity. Further, the need for research to characterize trait relationships and responses through the vertical canopy is becoming a need, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Within-canopy leaf traits vary--from shaded canopy position to exposed positions [@casasSunShadeLeaves2011]-- at a leaf anatomical, structural and biochemical level [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020] that contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. Table `r table_leaf_traits`, summarizes relevant traits for thermal sensitivity. Further, the need for research to characterize trait relationships and responses through the vertical canopy is becoming a need, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+
+On another note, along the ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ are observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -257,7 +259,7 @@ The vertical distribution of biochemical traits enables photosynthesis and metab
 
 ### Interspecific variation 
 
-Widely, across forest species, the pattern of fundamental trait adaptation to light gradients is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, trait plasticity can vary several-folds between  multi-species canopy and understory,  based on their inherent specie-specific traits and environmental conditions. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Along the ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ are observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore, collectively, $T_{leaf}$ differs across specie-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Widely, across forest species, the pattern of fundamental trait adaptation to light gradients is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, trait plasticity can vary several-folds between  multi-species canopy and in understory species,  based on their inherent specie-specific traits and environmental conditions. Spatio-temporal gradients, offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007; @ishiiExploringRelationshipsCanopy2004a]. Therefore, collectively, $T_{leaf}$ differs across specie-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase than species with larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -287,7 +289,7 @@ nocite: |
 
 ### Stomatal conductance
 
-Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] where although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steep in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. This diurnal pattern and resulting $A_{max}$ varies between species, such as early- and late-successional [@ishiiExploringRelationshipsCanopy2004a], and between gymnosperms and angiosperms [@bonan_ecological_2016].
+Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] where although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steep in sun-leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. However, $T_{opt}$ of $gs$ doesnot vary between sun and shade leaves [Slot et al. 2019]. The diurnal $gs$ pattern and resulting $A_{max}$ varies between species, such as early- and late-successional [@ishiiExploringRelationshipsCanopy2004a], and between gymnosperms and angiosperms [@bonan_ecological_2016].
 
 ### Photosynthesis
 
@@ -323,9 +325,11 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-While a few studies show $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves across species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Contrastingly, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+Leaf respiration is lower during the day than the night, due to light-induced inhibition that is highest in high-irradiance and moderate-to-high-temperature and lowest at high-irradiance and low-temperature [@atkinLeafRespirationSnow2000; @atkinLeafRespirationSnow2000; @keenanWidespreadInhibitionDaytime2019; @zaragoza-castellsDoesGrowthIrradiance2007]. Light-induced inhibition of leaf respiration influences $Q_{10}$ where $Q_{10}$ is greater in the in the dark, and decreases with increase in irradiance [@atkinLeafRespirationSnow2000]. 
 
-Further, @xuSeasonalVariationTemperature2006 showed that the response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] in Quercus rubra also hardly varied with canopy position. However, considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites.
+However, when it comes to sun and shade leaves, a few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves across species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996] and other studies have observed no difference in $Q_{10}$ across species vertical profiles [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999], and at Coweeta, temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+Furthermore, response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] showed no variation in canopy positions of Quercus rubra, whereas on considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites [@xuSeasonalVariationTemperature2006].  
+
  
 ### VOC production
 
